--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>My Favorite Anime</title>
   </head>
   <body>
-    <div class="nav">
+
     <nav class="navbar navbar-expand-lg bg-dark fixed-top">
       <div class="container">
       <img src="/Teal Dark Blue Elegant Modern Letter A Rocket Logo.png" alt="" style="height: 70px; width: 100px;">
@@ -71,10 +71,9 @@
       </div>
      
     </nav>
-  <div>
-</div>  
 
-  <div class="container-fluid">
+
+
     <div id="carouselSlide" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button data-bs-target="#carouselSlide" data-bs-slide-to="0" class="active"></button>
@@ -1447,7 +1446,7 @@
   
   
   
-      <div class="container bg-dark p-3 mt-5" style="width: 100;" >
+      <div class="container-fluid bg-dark p-3 mt-5" >
   
         <div class="d-flex align-items-center justify-content-evenly text-white">
           <h5>Follow us:</h5>
@@ -1482,6 +1481,6 @@
 
 
 
-  <script src="bootstrap.bundle.js"></script>
+<script src="bootstrap.bundle.js"></script>
 
 </html>
